# ragaas

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
frontend/: package-lock.json  package.json
py-frontend/: app.py
src/data_ingestion/: app.py  pipeline.py
src/data_ingestion/db/: redis.py
src/data_ingestion/integrations/: pdf.py  single_pdf.py  web_scraper.py
src/types/: ingestion.py
tests/: conftest.py  pytest.ini  test_link_parser.py
